2007-06-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* PropertyDescriptorCollection.cs: Added missing explicit interface
	implementation of IEnumerable.GetEnumerator.
	* TypeDescriptor.cs: Params modifier applies to 1.0 profile as well.
	Spaces to tabs.

2007-05-31  Atsushi Enomoto  <atsushi@ximian.com>

	* LookupBindingPropertiesAttribute.cs:
	  Should be sealed. Implemented GetHashCode().

2007-05-31  Atsushi Enomoto  <atsushi@ximian.com>

	* ContainerFilterService.cs CustomTypeDescriptor.cs
	  InstanceCreationEditor.cs InvalidAsynchronousStateException.cs
	  MultilineStringConverter.cs NestedContainer.cs
	  NullableConverter.cs TypeDescriptionProvider.cs
	  TypeDescriptionProviderAttribute.cs :
	  2.0 stubs except for [Obsolete].
	* TypeDescriptor.cs : added missing 2.0 members.

2007-05-31  Atsushi Enomoto  <atsushi@ximian.com>

	* PropertyDescriptor.cs : oops, wrong fix.

2007-05-31  Atsushi Enomoto  <atsushi@ximian.com>

	* PropertyDescriptor.cs : call base. fix winforms tests.

2007-05-31  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* LookupBindingPropertiesAttribute.cs: Implemented.

2007-05-31  Atsushi Enomoto  <atsushi@ximian.com>

	* AsyncOperationManager.cs AttributeCollection.cs
	  BackgroundWorker.cs BindingList.cs CategoryAttribute.cs
	  Component.cs DataObjectFieldAttribute.cs DefaultValueAttribute.cs
	  DescriptionAttribute.cs EventDescriptorCollection.cs
	  IComNativeDescriptorHandler.cs IListSource.cs
	  ListSortDescriptionCollection.cs MemberDescriptor.cs
	  PropertyDescriptor.cs SyntaxCheck.cs ToolboxItemFilterAttribute.cs:
	  2.0 profile updates.

2007-05-15 Adar Wesley <adarw@mainsoft.com>

	* AttributeCollection.cs: added missing method FromExisting.

	* Container.cs: added missing method ValidateName

	* DefaultValueAttribute.cs: added missing method SetValue.

	* EventHandlerList.cs: added missing method AddHandlers.

	* MemberDescriptor.cs: added missing method GetInvocationTarget.
